# RateRover

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
docker/: raterover.sh
raterover/: cli.py
raterover/common/: http_client.py
raterover/common/api/: service.py  settings.py
raterover/common/api/schemas/: health.py
raterover/common/binance/: __init__.py  service.py  settings.py
raterover/common/broker/: handler.py  service.py  settings.py
raterover/common/broker/models/: course.py  models.py
raterover/common/database/: cli.py  service.py  settings.py
raterover/common/request_course/: __init__.py  service.py  settings.py
raterover/common/utils/: package.py
raterover/currency_course/: README.md  __main__.py  cli.py  config.py  service.py  settings.py
raterover/currency_course/api/: cli.py  health.py  router.py  service.py
raterover/currency_course/api/rest/: router.py  schemas.py
raterover/currency_course/api/rest/currency_course/: dependencies.py  handlers.py  router.py  schemas.py
raterover/currency_course/binance/: __init__.py  service.py
raterover/currency_course/broker/: __init__.py  cli.py  consumer_service.py  handler.py  producer_service.py
raterover/currency_course/database/: __init__.py  cli.py  models.py  service.py
raterover/currency_course/database/migrations/: alembic.ini  env.py
raterover/exchange/: __init__.py  cli.py  service.py  settings.py
raterover/exchange/database/: models.py  service.py
raterover/exchange/database/migrations/: env.py
raterover/test/: config.py  http_max.py
(+5 files in other folders)
