[tool.poetry]
name = "raterover"
version = "0.1.0"
description = ""
authors = ["Alexander Platonov <sasa20sasha19910@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.1.0"
fastapi = "^0.109.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"
typer = "^0.9.0"
facet = "^0.10.0"
loguru = "^0.7.2"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
