[tool.poetry]
name = "raterover"
version = "0.1.0"
description = ""
authors = ["Alexander Platonov <sasa20sasha19910@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
asyncpg = { version = "^0.28.0", optional = true }

python = "^3.11"
pydantic-settings = "^2.1.0"
fastapi = "^0.109.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"
typer = {version = "^0.9.0", extras = ["all"]}
facet = "^0.10.0"
loguru = "^0.7.2"
uvicorn = "^0.27.0.post1"
pydantic = "^2.6.0"
websockets = "^12.0"
aio-pika = "^9.4.0"
backoff = "^2.2.1"
httpx = "^0.26.0"
python-multipart = "^0.0.7"

[tool.poetry.extras]
postgres = ["asyncpg"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
